--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "athena-server",
   "version": "0.0.1",
-  "description": "AuxoGarden's Backend",
+  "description": "AUXOGarden's Backend",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
