--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   },
   "homepage": "https://github.com/iticapstones17/Athena-Server#readme",
   "dependencies": {
-    "express": "^4.15.2",
-    "request": "^2.81.0"
+    "express": "4.15.2",
+    "request": "2.81.0",
+    "body-parser": "1.17.1",
+    "ejs": "2.5.6",
+    "sequelize": "3.30.4",
+    "tedious": "2.0.0",
+    "socket.io": "1.7.3"
   }
 }
